# target-non-target-classification

./: .gitignore  Makefile  README.md  pyproject.toml
conf/: base.yaml  main.yaml  make_dataset.yaml
data/csv/: README.md  sample_data.csv
preprocess/: make_dataset.py  process_csv.py
src/: loss.py  main.py  model.py
util/: plot.py
